--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "angular-seed",
+  "name": "evervest-interview",
   "private": true,
   "version": "0.0.0",
-  "description": "A starter project for AngularJS",
+  "description": "Interview project for Evervest",
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.3.1",
-    "http-server": "^0.6.1"
+    "gulp": "^3.9.0"
   },
   "scripts": {
-    "postinstall": "bower install",
-
-    "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1"
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.13.3"
   }
 }
