--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "~1.4.8"
+    "angular": "~1.4.8",
+    "angular-bootstrap": "~0.14.3",
+    "angular-ui-router": "~0.2.15",
+    "angular-animate": "~1.4.8",
+    "bootstrap-css-only": "~3.3.5"
   }
 }
